some styling added

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,19 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 2em;
+  padding: 2em;
+  background-color: lightblue;
 }
 
+body {
+  background-color: whitesmoke;
+}
+
+.headerLinks {
+  color: black;
+}
 
 .appPhrase {
   text-align: center;
+  padding: 1em;
 }
