--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,12 @@ body {
   background-color: whitesmoke;
 }
 
-.headerLinks {
+.appName a {
   color: black;
+}
+
+.appName a:hover {
+  text-decoration: none;
 }
 
 .appPhrase {
